scripts/kcl-certificate/case2/networking.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sock-shop-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sock-shop
spec:
  hosts:
  - "sock-shop.acornsoft.io"
  gateways:
  - sock-shop-gateway
  http:
  - route:
    - destination:
        host: front-end
        port:
          number: 80
